# snake_game

./: CMakeLists.txt  README.md
src/: Constant.h  Food.cpp  Food.h  Snake.cpp  Snake.h  main.cpp
